# ml-ops

./: .gitignore  README.md
ml-hub/: README.md  pyproject.toml
ml-hub/ml_hub/: __init__.py
ml-hub/ml_hub/domain/: __init__.py
ml-hub/ml_hub/domain/interfaces/: __init__.py
ml-hub/ml_hub/domain/interfaces/ml/: __init__.py  scoring.py
ml-hub/ml_hub/domain/interfaces/repos/: __init__.py  scoring_models.py
ml-hub/ml_hub/domain/value_objects/: __init__.py  metadata.py  model_info.py  scoring_features.py
ml-hub/ml_hub/infrastructure/: __init__.py
ml-hub/ml_hub/infrastructure/ml/: __init__.py
ml-hub/ml_hub/infrastructure/ml/scoring/: __init__.py  mlflow.py  random_forest.py
ml-hub/ml_hub/infrastructure/repos/: __init__.py
ml-hub/ml_hub/infrastructure/repos/scoring_models/: __init__.py  mlflow.py
ml-hub/tests/: conftest.py
ml-hub/tests/integration/infrastructure/repositories/: __init__.py
ml-hub/tests/integration/infrastructure/repositories/scoring_models/: __init__.py  test_mlflow.py
ml-hub/tests/mock/: __init__.py
ml-hub/tests/mock/infrastructure/: __init__.py
ml-hub/tests/mock/infrastructure/ml/: __init__.py  scoring.py
